--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-export-table-to-excel": "^1.0.6",
-    "react-html-table-to-excel": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
