Fix react peerDeps conflict

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://backend-c8u6.onrender.com
+REACT_APP_API_URL=https://backend-c8u6.onrender.com/api
 REACT_APP_IS_LOCAL=true
